# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: Python test.yaml
gendiff/: cli.py  engine.py  gendiff.py  generate_diff.py  loader.py  parser.py
gendiff/formatters/: __init__.py  format.py  formatters.py  json.py  json_generation.py  plain.py  plain_generation.py  pretty.py  yaml_generation.py
gendiff/scripts/: __init__.py  gendiff.py  json_generation.py  parsing.py  plain_geneeration.py
tests/: test_gendiff.py
tests/fixtures/: f1.yml  f2.yml  file1.json  pretty_complex.txt  results.py  short_file1.yml  short_file2.yml
