[tool.poetry.scripts]
gendiff = "gendiff.cli:main"
proba = "gendiff.scripts.parsing:main"


[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["lpainl"]
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
